--- a/client/client.html
+++ b/client/client.html
@@ -8,9 +8,11 @@
 <body>
     <section id="top">
         <h3>Pokemon API</h3>
-        <form id="pokeForm" action="/getPokemon" method="get">
+        <form id="pokeForm" action="/pokemon" method="get">
+            <label for="pokemon">Pokemon:</label>
             <input type="text" name="pokemon" id="nameField">
         </form>
+
     </section>
 </body>
 </html>
