--- a/client/client.html
+++ b/client/client.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon API</title>
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <script>
         const handleResponse = async (response) => {
             const content = document.querySelector('#content');
@@ -137,6 +138,7 @@
         </form>
     </section>
     <section id="content">
+        <p>No results to show</p>
     </section>
 </body>
 </html>
